<resources>
    <string name="app_name">Calculator</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="answer">Answer</string>
    <string name="equals">=</string>
    <string name="cancel_button">C</string>
    <string name="multiply_button">*</string>
    <string name="dot_button">.</string>
    <string name="divide_button">/</string>
</resources>